--- a/server/tinode.conf
+++ b/server/tinode.conf
@@ -200,7 +200,7 @@
 
 		// DB adapter name to communicate with the DB backend.
 		// Must be one of the adapters from the list below.
-		"use_adapter": "",
+		"use_adapter": "mysql",
 
 		// Configurations of individual adapters.
 		"adapters": {
@@ -211,6 +211,7 @@
 				// See https://pkg.go.dev/github.com/go-sql-driver/mysql#Config for more info
 				// and available fields and options.
 				"User": "root",
+				"Passwd":"zhh123",
 				"Net": "tcp",
 				"Addr": "localhost",
 				"DBName": "tinode",
@@ -222,7 +223,7 @@
 
 				// Deprecated connection settings. Kept for backward compatibility.
 				// DSN, passed unchanged to MySQL driver. See https://github.com/go-sql-driver/mysql#dsn-data-source-name for syntax.
-				// "dsn": "root@tcp(localhost)/tinode?parseTime=true&collation=utf8mb4_unicode_ci",
+				// "dsn": "root:zhh123@tcp(localhost)/tinode?parseTime=true&collation=utf8mb4_unicode_ci",
 				// Name of the main database.
 				// "database": "tinode",
 
@@ -340,12 +341,12 @@
 				// The file path itself is treated as a template. It's resolved by using the
 				// "languages" field above. One template per language.
 				// See the template file for the explanation of the expected structure.
-				"validation_templ": "./templ/email-validation-{{.Language}}.templ",
+				"validation_templ": "templ/email-validation-{{.Language}}.templ",
 
 				// Message template for resetting authentication secret.
 				// One template per language. See email-validation-en template for the explanation
 				// of the expected structure.
-				"reset_secret_templ": "./templ/email-password-reset-{{.Language}}.templ",
+				"reset_secret_templ": "templ/email-password-reset-{{.Language}}.templ",
 
 				// Allow this many confirmation attempts before blocking the credential.
 				"max_retries": 3,
@@ -370,7 +371,7 @@
 			"add_to_tags": true,
 			"config": {
 				"languages": ["en"],
-				"template": "./templ/sms-validation.templ",
+				"template": "templ/sms-validation.templ",
 				"max_retries": 4,
 				"debug_response": "123456"
 			}
