服务器初始化 加注释

--- a/server/tinode.conf
+++ b/server/tinode.conf
@@ -62,6 +62,7 @@
 	"default_country_code": "",
 
 	// Large media/blob handlers: large files/images included in messages.
+	// 型媒体/ blob处理程序:大文件/图像包含在消息。
 	"media": {
 		// The name of the media handler to use.
 		"use_handler": "fs",
